--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
-    "html": "^1.0.0"
-  }
+    "html": "^1.0.0",
+    "node": "^21.2.0",
+    "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "cs290_final_group50-main",
+  "description": "final project for CS 290 final project group 50",
+  "version": "1.0.0",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
